[package]
name = "aurrs"
version = "0.1.0"
description = "A simple and informative way to vote on the Arch User Repository."
homepage = "https://github.com/acheronfail/aurrs"
repository = "https://github.com/acheronfail/aurrs"
keywords = ["aur", "vote", "arch"]
categories = ["command-line-utilities"]
authors = ["acheronfail <acheronfail@gmail.com>"]
license = "Unlicense OR MIT OR Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.31"
clap = { version = "3.0.0-beta.1", git = "https://github.com/clap-rs/clap" }
dirs = "3.0.0"
futures = "0.3.5"
# FIXME: there are various issues when trying to build this crate, and it also can't be released
# until a bug in one of its upstream dependencies is fixed, too.
# Consider a different crate, or not using libsecret to fetch secrets.
keytar = { version = "0.1.1", git = "https://github.com/stoically/keytar-rs", branch = "main" }
lazy_static = "1.4.0"
reqwest = { version = "0.10", features = ["cookies", "json"] }
rpassword = "4.0.5"
scraper = "0.12.0"
serde = "1.0.114"
tokio = { version = "0.2", features = ["full"] }
toml_edit = "0.2.0"
urlencoding = "1.1.1"

[build-dependencies]
clap = { version = "3.0.0-beta.1", git = "https://github.com/clap-rs/clap" }
clap_generate = { version = "3.0.0-beta.1", git = "https://github.com/clap-rs/clap" }
