[package]
name = "aurrs"
version = "0.1.0"
description = "A simple and informative way to vote on the Arch User Repository."
homepage = "https://github.com/acheronfail/aurrs"
repository = "https://github.com/acheronfail/aurrs"
keywords = ["aur", "vote", "arch"]
categories = ["command-line-utilities"]
authors = ["acheronfail <acheronfail@gmail.com>"]
license = "Unlicense OR MIT OR Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.32"
clap = "3.0.0-beta.2"
dirs = "3.0.1"
keytar = "0.1.3"
lazy_static = "1.4.0"
libc = "0.2.77"
raur = "3.0.1"
reqwest = { version = "0.10.8", features = ["cookies", "json"] }
rpassword = "5.0.0"
scraper = "0.12.0"
serde = "1.0.116"
toml_edit = "0.2.0"
urlencoding = "1.1.1"

[build-dependencies]
clap = { version = "3.0.0-beta.2" }
clap_generate = { version = "3.0.0-beta.2" }
